--- a/src/app/payment/payment-options/payment-options.page.scss
+++ b/src/app/payment/payment-options/payment-options.page.scss
@@ -4,7 +4,8 @@
 }
 
 ion-content{
-    --ion-background-color: #Ffff;
+    // --ion-background-color: #Ffff;
+    --ion-background-color: #F8F8F8;
 }
 
 ion-button {
