--- a/src/app/home/categories/categories.page.html
+++ b/src/app/home/categories/categories.page.html
@@ -44,7 +44,8 @@
       <ion-row *ngIf="!isLoading" style="height:42px">
         <ion-col class="ion-no-padding" size="12" size-xl="8" offset-xl="2">
           <p style="font-weight: 500;font-size: 16px;margin: 8px 10px;color:#282c3f">
-            Hey {{customerInfo?.customer_name }}! What would you like to order today?
+            <!-- Hey {{customerInfo?.customer_name }}! What would you like to order today? -->
+            Hey ! What would you like to order today?
           </p>
         </ion-col>
       </ion-row>
